frame/support/test/tests/pallet_ui/step_022.stderr
error: expected `Call`
  --> $DIR/step_022.rs:15:17
   |
15 |     impl<T: Trait> Foo for Module<T> {}
   |                    ^^^
